# ccm-convergence-rate

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  paper.tex  paper_v1.1.tex
data/: zeta_zeros.json
scripts/: reproduce.py
src/: main.rs
tests/: integration.rs
